--- a/.rhiza/history
+++ b/.rhiza/history
@@ -60,6 +60,7 @@ presentation/presentation.mk
 pytest.ini
 renovate.json
 tests/test_rhiza/README.md
+tests/test_rhiza/__init__.py
 tests/test_rhiza/benchmarks/.gitignore
 tests/test_rhiza/benchmarks/README.md
 tests/test_rhiza/benchmarks/analyze_benchmarks.py
