--- a/.rhiza/history
+++ b/.rhiza/history
@@ -33,15 +33,18 @@
 .rhiza/docs/CONFIG.md
 .rhiza/docs/PRIVATE_PACKAGES.md
 .rhiza/docs/TOKEN_SETUP.md
-.rhiza/make.d/00-custom-env.mk
-.rhiza/make.d/01-test.mk
-.rhiza/make.d/02-book.mk
-.rhiza/make.d/03-marimo.mk
-.rhiza/make.d/05-github.mk
-.rhiza/make.d/06-agentic.mk
-.rhiza/make.d/08-docs.mk
-.rhiza/make.d/10-custom-task.mk
 .rhiza/make.d/README.md
+.rhiza/make.d/agentic.mk
+.rhiza/make.d/book.mk
+.rhiza/make.d/bootstrap.mk
+.rhiza/make.d/custom-env.mk
+.rhiza/make.d/custom-task.mk
+.rhiza/make.d/docs.mk
+.rhiza/make.d/github.mk
+.rhiza/make.d/marimo.mk
+.rhiza/make.d/quality.mk
+.rhiza/make.d/releasing.mk
+.rhiza/make.d/test.mk
 .rhiza/requirements/README.md
 .rhiza/requirements/docs.txt
 .rhiza/requirements/marimo.txt
@@ -51,33 +54,27 @@
 .rhiza/scripts/release.sh
 .rhiza/templates/minibook/custom.html.jinja2
 .rhiza/tests/README.md
-.rhiza/tests/__init__.py
-.rhiza/tests/api/__init__.py
 .rhiza/tests/api/conftest.py
 .rhiza/tests/api/test_github_targets.py
 .rhiza/tests/api/test_makefile_api.py
 .rhiza/tests/api/test_makefile_targets.py
 .rhiza/tests/conftest.py
-.rhiza/tests/deps/__init__.py
 .rhiza/tests/deps/test_dependency_health.py
-.rhiza/tests/integration/__init__.py
 .rhiza/tests/integration/test_book_targets.py
+.rhiza/tests/integration/test_lfs.py
 .rhiza/tests/integration/test_marimushka.py
 .rhiza/tests/integration/test_notebook_execution.py
 .rhiza/tests/integration/test_release.py
-.rhiza/tests/structure/__init__.py
+.rhiza/tests/integration/test_test_mk.py
+.rhiza/tests/structure/test_lfs_structure.py
 .rhiza/tests/structure/test_project_layout.py
 .rhiza/tests/structure/test_requirements.py
-.rhiza/tests/sync/__init__.py
 .rhiza/tests/sync/conftest.py
 .rhiza/tests/sync/test_docstrings.py
 .rhiza/tests/sync/test_readme_validation.py
 .rhiza/tests/sync/test_rhiza_version.py
-.rhiza/tests/utils/__init__.py
-.rhiza/tests/utils/conftest.py
+.rhiza/tests/test_utils.py
 .rhiza/tests/utils/test_git_repo_fixture.py
-.rhiza/tests/utils/test_version_matrix.py
-.rhiza/utils/version_matrix.py
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
 LICENSE
